force-app/main/default/objects/cgcloud__BO_API_Entity__c/cgcloud__BO_API_Entity__c.object-meta.xml
<CustomObject>
    <description>This table holds the entities definitions for Business Object API&apos;s.</description>
    <label>Business Object API Entity</label>
    <nameField>
        <label>Business Object API Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Business Object API Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>