force-app/main/default/objects/cgcloud__BO_API_Entity__c/fields/cgcloud__Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description__c</fullName>
    <description>Description of the entity.</description>
    <label>Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>