force-app/main/default/objects/cgcloud__BO_API_Entity__c/fields/cgcloud__Location__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Location__c</fullName>
    <defaultValue>&apos;Input&apos;</defaultValue>
    <description>Location of the entity. Input JSON or Output JSON.</description>
    <label>Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Output</fullName>
            </value>
            <value>
                <fullName>Input</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>