force-app/main/default/objects/cgcloud__BO_API_Entity__c/fields/cgcloud__Path__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Path__c</fullName>
    <description>Path of the entity.</description>
    <inlineHelpText>Multiple paths can be specified separated by &apos;,&apos;.</inlineHelpText>
    <label>Path</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>