force-app/main/default/objects/cgcloud__BO_API_Entity__c/validationRules/cgcloud__Path_should_be_valid_JSON_path.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Path_should_be_valid_JSON_path</fullName>
    <active>true</active>
    <description>The Path must represent a valid JSON path.</description>
    <errorConditionFormula>IF(ISBLANK(cgcloud__Path__c), false, NOT REGEX(cgcloud__Path__c, &quot;^(?:(?:\\.\\w+(?:\\[\\*\\])?)+)(?:,(?:\\.\\w+(?:\\[\\*\\])?)+)*$&quot;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Path__c</errorDisplayField>
    <errorMessage>The Path must represent a valid JSON path.</errorMessage>
</ValidationRule>